# NexusML

./: .gitignore  .modelvaultrc  README.md  docker-compose.yml
control-plane/: .dockerignore  Dockerfile  README.md  pyproject.toml
control-plane/nexus/: __init__.py  cli.py  config.py  git_utils.py  metadata.py  storage.py
control-plane/scripts/: demo.py  nexus-docker.sh
data-plane/: README.md
data-plane/model-server/: Dockerfile  config.py  model_loader.py  requirements.txt  server.py
data-plane/model-server/tests/: __init__.py  test_model_loader.py  test_server.py
data-plane/proxy/: Dockerfile  go.mod  go.sum
data-plane/proxy/cmd/server/: main.go
data-plane/proxy/config/: config.go
data-plane/proxy/internal/batcher/: batcher.go
data-plane/proxy/internal/client/: client.go
data-plane/proxy/internal/router/: router.go
docs/: ARCHITECTURE.md  DEMO.md  DOCKER.md  SETUP.md
models/: test_model.pkl
